--- a/apply/main.css
+++ b/apply/main.css
@@ -211,7 +211,7 @@ h2{
   padding-top:30px;
   padding-bottom:60px;
   background:#fff;
-  border:1px solid #f3f3f3;
+  border:1px solid #eee;
   border-radius: 5px;
   margin-top:20px;
   margin-left: auto;
